--- a/src/Problemes/SatProblem/Benchmarks/subsets100.cnf
+++ b/src/Problemes/SatProblem/Benchmarks/subsets100.cnf
@@ -1,7 +1,7 @@
 c This CNF file was generated here: http://toughsat.appspot.com/
 c
 c A 3SAT instance whose satisfying assignment encodes the subset of [1, 2, 2, 3, 5, 7, 8, 8, 11, 15, 18, 19, 22, 23, 24, 24, 27, 28, 28, 30, 30, 31, 32, 32, 32, 33, 34, 34, 36, 37, 38, 38, 39, 39, 39, 40, 41, 41, 41, 42, 42, 43, 50, 52, 52, 53, 53, 53, 54, 54, 54, 54, 56, 56, 57, 57, 58, 58, 60, 60, 61, 64, 65, 66, 68, 68, 68, 68, 69, 71, 71, 71, 71, 71, 71, 73, 73, 75, 78, 80, 80, 82, 83, 84, 85, 86, 87, 88, 89, 91, 92, 92, 93, 93, 93, 93, 95, 97, 99, 99] that add up to 2994
-c One possible solution is: [1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0]
+c One possible GASolution is: [1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0]
 p cnf 3357 15212
 101 0
 -102 0
